# q-hack-2026

./: .dockerignore  .env.example  .gitignore  Argus.pptx  README.md  TODO.md  Taskfile.yml  chat-history-data-model.md  dashboard_mockup.html  docker-compose.yml  logs.jsonl  step1_anonymize.py  step2_mock_stream.py  step4_ingest.py  turbo.json
chat-exports/: Antigravity-IDN-File-Player-Update Timecode Settings.md  Antigravity-Implementing New Alert Features.md  chatgpt_app-zugriff-auf-postfach_2026-04-08T15-39-03+0000.json  chatgpt_e2e-testing-with-excel_2026-04-08T15-24-15+0000.json  chatgpt_fermat-s-unproven-claim_2026-04-08T17-45-40+0200.json  chatgpt_host-flask-on-azure_2026-04-08T17-49-05+0200.json  chatgpt_idn-audio-implementation_2026-04-08T15-32-04+0000.json  chatgpt_reliable-locators-in-angular_2026-04-08T17-48-46+0200.json  chatgpt_synthetic_customer_data_demo_2026-04-09T00-00-00+0000.json  gemini-HTTP-format-26-04-08_19-52-27.har  (+2 more)
config/: app.yaml  (+4 more)
src/backend/: Dockerfile  alembic.ini  pyproject.toml
src/backend/alembic/: env.py
src/backend/app/: config.py  container.py  main.py  middleware.py  scheduler.py  startup.py  telemetry.py
src/backend/app/agents/: a2a_agent.py  anthropic_agent.py  autonomous.py  event_bus.py  langgraph_agent.py  mcp_client.py  memory.py  meta_analyzer.py  openai_agent.py  orchestrator.py  recommender.py  registry.py  strands_agent.py  strands_tools.py  tool_registry.py  tools.py  tools_builtin.py  tools_external.py
src/backend/app/api/: graphql.py
src/backend/app/api/v1/endpoints/: agents.py  auth.py  autonomous.py  dashboard.py  data.py  data_stream.py  health.py  metrics.py  recommendations.py  slopsquatting.py  stream.py  webhooks.py
src/backend/app/application/: unit_of_work.py
src/backend/app/application/commands/: user_commands.py
src/backend/app/application/config/: __init__.py  deterministic_rules_config.py
src/backend/app/application/handlers/: user_handler.py
src/backend/app/application/services/: chat_import.py  dashboard_service.py  deterministic_analysis.py  deterministic_extraction.py  llm_extraction.py  meta_analysis.py  recommendation_engine.py  slopsquatting.py
src/backend/app/auth/: __init__.py  jwt.py  password.py
src/backend/app/domain/: analysis.py  dashboard.py  entities.py  events.py  interfaces.py  specifications.py  value_objects.py
src/backend/app/domain/slopsquatting/: entities.py  interfaces.py  value_objects.py
src/backend/app/infrastructure/: api_client.py  database.py  duckdb_store.py  ecosystems_client.py  mapping.py
src/backend/app/infrastructure/data_mapping/: adapters.py  graph_builder.py  pipeline.py
src/backend/app/infrastructure/repositories/: dashboard_repository.py  deterministic_analysis_repository.py  popular_package_repository.py  user_repository.py
src/backend/app/models/: __init__.py
src/backend/scripts/: api_explore.py  run_analysis_worker.py  run_chat_import.py  run_deterministic_analysis.py  run_llm_extraction.py  seed.py  seed_database.py  wipe_database.py
src/backend/scripts/postgres/: 001_init_schema.sql  002_chats_schema.sql  003_deterministic_analysis_schema.sql  003_findings_schema.sql  003_popular_packages_schema.sql  004_dashboard_views.sql  005_deterministic_analysis_views.sql  005_insights_schema.sql  006_recommendations_schema.sql  README.md
src/backend/tests/: conftest.py  test_agents.py  test_auth.py  test_dashboard_api.py  test_data.py  test_health.py  test_slopsquatting.py
src/dataloader/: Dockerfile  pyproject.toml
src/dataloader/dataloader/: config.py  extractors.py  gemini.py  ingest.py  main.py
src/rust-worker/: Cargo.toml  Dockerfile
src/rust-worker/src/: main.rs
(+67 files in other folders)
