[project]
name = "hackathon-backend"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.30",
    "alembic>=1.14",
    "pydantic>=2.10",
    "pydantic-settings>=2.7",
    "redis>=5.2",
    "neo4j>=5.26",
    "bcrypt>=4.2",
    "pyjwt>=2.10",
    "python-dotenv>=1.0",
    "httpx>=0.27",
    "structlog>=24.4",
    "strands-agents[gemini]>=0.1",
    "strands-agents-tools>=0.1",
    "python-multipart>=0.0.12",
    "psycopg2-binary>=2.9",
    "pyyaml>=6.0",
    "sse-starlette>=2.0",
    "email-validator>=2.3.0",
    "google-genai>=1.71.0",
    "opentelemetry-api>=1.29",
    "opentelemetry-sdk>=1.29",
    "opentelemetry-exporter-otlp-proto-grpc>=1.29",
    "opentelemetry-instrumentation-fastapi>=0.50b",
    "opentelemetry-instrumentation-httpx>=0.50b",
    "opentelemetry-instrumentation-sqlalchemy>=0.50b",
    "opentelemetry-instrumentation-redis>=0.50b",
    "mangum>=0.19",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "aiosqlite>=0.20",
    "ruff>=0.8",
]

[tool.uv.workspace]
members = ["."]

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
