# To build for WASM (browser-side processing):
# rustup target add wasm32-unknown-unknown
# cargo build --target wasm32-unknown-unknown --release
# Use wasm-bindgen for JS interop

[package]
name = "hackathon-worker"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.8"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
csv = "1.3"
anyhow = "1"
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
tower-http = { version = "0.6", features = ["cors"] }

[profile.release]
opt-level = 3
lto = true
